--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "eslint": "^7.28.0",
+    "prettier": "^2.3.1",
     "typescript": "^4.3.2"
   }
 }
