--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.28.0",
     "prettier": "^2.3.1",
     "typescript": "^4.3.2"
