--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "contentful": "^8.4.2",
+    "next-env": "^1.1.1",
+    "dotenv-load": "^2.0.0",
+    "gray-matter": "^4.0.3",
+    "react-markdown": "^6.0.2",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
