--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@artsy/fresnel": "^1.7.0",
     "contentful": "^8.4.2",
-    "next-env": "^1.1.1",
     "dotenv-load": "^2.0.0",
     "gray-matter": "^4.0.3",
-    "react-markdown": "^6.0.2",
     "next": "10.2.3",
+    "next-env": "^1.1.1",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^6.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3"
   },
