--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "export": "next export"
   },
   "dependencies": {
-    "dotenv-load": "^2.0.0",
     "gray-matter": "^4.0.3",
     "mongodb": "^3.6.6",
     "next": "10.0.6",
@@ -18,7 +17,11 @@
     "react": "17.0.1",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3", 
+    "contentful": "^8.4.2",
+    "dotenv-load": "^2.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
@@ -28,6 +31,12 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "@types/react": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "dotenv": "^10.0.0",
+    "prettier": "^2.3.1",
+    "typescript": "^4.3.2"
   }
 }
