--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs-course",
-  "version": "0.1.0",
+  "name": "nrg-nomad",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,21 +9,26 @@
     "export": "next export"
   },
   "dependencies": {
+    "contentful": "^8.4.2",
+    "dotenv-load": "^2.0.0",
     "gray-matter": "^4.0.3",
     "mongodb": "^3.6.6",
     "next": "10.0.6",
     "next-env": "^1.1.1",
     "prop-types": "^15.7.2",
-    "react": "17.0.1",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-markdown": "^6.0.2",
-    "react-syntax-highlighter": "^15.4.3", 
-    "contentful": "^8.4.2",
-    "dotenv-load": "^2.0.0",
+    "react-syntax-highlighter": "^15.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3"
   },
   "devDependencies": {
+    "@types/node": "^16.3.3",
+    "@types/react": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "dotenv": "^10.0.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -32,10 +37,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "@types/react": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "dotenv": "^10.0.0",
     "prettier": "^2.3.1",
     "typescript": "^4.3.2"
   }
