--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.4",
+    "sass": "^1.37.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3"
   },
