--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@artsy/fresnel": "^1.7.0",
     "contentful": "^8.4.2",
     "dotenv-load": "^2.0.0",
+    "formik": "^2.2.9",
     "gray-matter": "^4.0.3",
     "next": "10.2.3",
     "next-env": "^1.1.1",
