--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv-load": "^2.0.0",
     "formik": "^2.2.9",
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.1.0",
     "next": "10.2.3",
     "next-env": "^1.1.1",
     "prop-types": "^15.7.2",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.9",
     "@types/react-syntax-highlighter": "^13.5.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
