--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "semantic-ui-react": "^2.0.3"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.9",
     "@types/react-syntax-highlighter": "^13.5.2",
