--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
 			"@common": ["framework/common"],
 			"@common/*": ["framework/common/*"],
 			"@framework": ["framework/shopfy"],
-			"@framework/*": ["framework/shopfy/*"]
+			"@framework/*": ["framework/shopfy/*"],
+			"@components/*": ["components/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
