--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
     "@types/react-syntax-highlighter": "^13.5.2",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "autoprefixer": "^10.3.6",
     "dotenv": "^10.0.0",
     "eslint": "^7.28.0",
-    "prettier": "^2.3.1",
-    "typescript": "^4.3.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.3.8",
+    "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.16",
+    "typescript": "^4.3.2"
   }
 }
