--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "build:css": "postcss styles/shop-styles.css -o styles/shop-styles_gen.css"
   },
   "dependencies": {
     "@artsy/fresnel": "^1.7.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.3.8",
+    "postcss-cli": "^9.0.1",
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.3.2"
