--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@artsy/fresnel": "^1.7.0",
     "animate.css": "^4.1.1",
+    "classnames": "^2.3.1",
     "contentful": "^8.4.2",
     "dotenv-load": "^2.0.0",
     "formik": "^2.2.9",
@@ -45,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.3.8",
     "postcss-cli": "^9.0.1",
+    "postcss-nested": "^5.0.6",
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.3.2"
