--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.4",
+    "react-ticker": "^1.2.2",
     "sass": "^1.37.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3"
