--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@artsy/fresnel": "^1.7.0",
     "animate.css": "^4.1.1",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
     "contentful": "^8.4.2",
     "dotenv-load": "^2.0.0",
