--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-ticker": "^1.2.2",
     "sass": "^1.37.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3"
+    "semantic-ui-react": "^2.0.3",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/mongoose": "^5.11.97",
