--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv-load": "^2.0.0",
     "formik": "^2.2.9",
     "gray-matter": "^4.0.3",
+    "keen-slider": "^5.5.1",
     "mongodb": "^4.1.0",
     "next": "10.2.3",
     "next-env": "^1.1.1",
