adding providing fetch function

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 			"@common/*": ["framework/common/*"],
 			"@framework": ["framework/shopfy"],
 			"@framework/*": ["framework/shopfy/*"],
+			"@shopify/*": ["framework/shopify/*"],
 			"@components/*": ["components/*"],
 			"@assets/*": ["assets/*"],
 			"@lib/*": ["lib/*"]
