--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^4.1.0",
     "next": "10.2.3",
     "next-env": "^1.1.1",
+    "js-cookie": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -51,8 +52,9 @@
     "postcss": "^8.3.8",
     "postcss-cli": "^9.0.1",
     "postcss-nested": "^5.0.6",
-    "prettier": "^2.3.1",
+    "prettier": "^2.4.1",
     "tailwindcss": "^2.2.16",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "@types/js-cookie": "^2.2.6"
   }
 }
